--- a/cookiecutter-template/{{cookiecutter.repo_name}}/{{cookiecutter.agent_name}}/.env.example
+++ b/cookiecutter-template/{{cookiecutter.repo_name}}/{{cookiecutter.agent_name}}/.env.example
@@ -1,3 +1,3 @@
-GOOGLE_CLOUD_PROJECT=hello-world-418507
-GOOGLE_CLOUD_LOCATION=us-central1
-GOOGLE_GENAI_USE_VERTEXAI=1 
+GOOGLE_CLOUD_PROJECT={{cookiecutter.project_id}}
+GOOGLE_CLOUD_LOCATION={{cookiecutter.location}}
+GOOGLE_GENAI_USE_VERTEXAI=1
